updated html for landing page

--- a/client/public/src/app/arena/arena.component.html
+++ b/client/public/src/app/arena/arena.component.html
@@ -1,5 +1,3 @@
-<p>
-  arena works!
-</p>
-<button [routerLink]="['/arena','standings']">See the standings</button> | <button [routerLink]="['/arena','character']">Create a Character</button> | <button [routerLink]="['/landing']">Leave the Arena</button> 
+
+<button [routerLink]="['/arena','battle']">Play</button> | <button [routerLink]="['/landing']">Leave the Arena</button> 
 <router-outlet></router-outlet>
