--- a/client/public/src/app/landing/landing.component.html
+++ b/client/public/src/app/landing/landing.component.html
@@ -1,3 +1,14 @@
-<h3>Let's Get Started with something... will add amazing styling "soon"</h3>
+<div>
+    
+  <h3>Graham Layman</h3>
 
-<button [routerLink]="['/arena','standings']">To the Arena!</button>
+  <p>Welcome to my humble portfolio. It is very much a work in progress at this point.</p>
+  <p>Primarily this is currently a place to show off polygon battle.</p>
+  <p>A game built in javascript utilizing the html canvas.</p>
+  <p>I hope you take the time to play with it and enjoy.</p>
+  <br>
+  <p>Thank you!</p>
+
+  <button [routerLink]="['/arena','battle']">Play Polygon Battle</button>
+
+</div>
