--- a/client/public/src/app/arena/arena.component.html
+++ b/client/public/src/app/arena/arena.component.html
@@ -1,3 +1,3 @@
 
-<button [routerLink]="['/arena','battle']">Play</button> | <button [routerLink]="['/landing']">Leave the Arena</button> 
+<button [routerLink]="['/arena','battle']">Play</button> | <button [routerLink]="['/landing']">Home</button> 
 <router-outlet></router-outlet>
