--- a/client/public/src/app/arena/battle/battle.component.html
+++ b/client/public/src/app/arena/battle/battle.component.html
@@ -1,5 +1,14 @@
 
-<h1>Polygon Battle</h1>
+<h1 id="top">Polygon Battle</h1>
+<h3>Controls:</h3>
+<h5><ul>
+  <li>Up:    W or Up Arrow</li>
+  <li>Down:  S or Down Arrow</li>
+  <li>Left:  A or Left Arrow</li>
+  <li>Right: D or Right Arrow</li>
+  <li>Shoot: Space Bar</li>
+  <li>Pause: P</li>
+</ul></h5>
 
 <div *ngIf="player" id="options">
  Color: <input type="color" name="userColor" [value]="player.stats.color" #userColor="ngModel" [(ngModel)]="player.stats.color">
