--- a/client/public/src/app/landing/landing.component.css
+++ b/client/public/src/app/landing/landing.component.css
@@ -2,3 +2,51 @@ div{
     width: 80%;
     margin: 0px auto;
 }
+
+body{
+    width: 90%;
+    margin: 0px auto;
+    background-color: #edf2ef;
+    padding: 20px;
+}
+h1{
+    padding-left: 5px;
+    background-color: #9aa59f;
+    box-shadow: 5px 5px 15px 1px #888888;
+}
+h2{
+    background-color: #9aa59f;
+    text-align: center;
+    box-shadow: 3px 3px 13px 1px #888888;
+
+}
+h3{
+    padding-left: 10px;
+    background-color: #bbc9c2;
+    box-shadow: 2px 2px 12px 1px #888888;
+}
+article{
+    background-color: #d3e2db;
+    box-shadow: 1px 1px 10px 1px #888888;
+}
+p{
+    padding-left: 10px;
+}
+
+.polyButton{
+    height: 40px;
+    width: 170px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 10px;
+    border-radius: 10px;
+    background-color: #ff7c83;
+    box-shadow: 1px 1px 10px 1px #888888;
+}
+.polyButton:hover{
+    background-color: #ff3f49;
+    cursor: pointer;
+}
+img{
+    margin: 0px auto;
+}
