few small changes to the html and css

--- a/client/public/src/app/landing/landing.component.html
+++ b/client/public/src/app/landing/landing.component.html
@@ -58,7 +58,7 @@
         </ul>
       </li>
     </ul>
-    <img src="/assets/polygonBattle.png" alt="" width="100%">
+    <img class="projectImg" src="/assets/Images/polygonBattle.png" alt="" width="90%">
     <button [routerLink]="['/arena','battle']" class="polyButton">Play Polygon Battle</button>
   </article>
 
