--- a/client/public/src/app/landing/landing.component.css
+++ b/client/public/src/app/landing/landing.component.css
@@ -47,6 +47,8 @@ p{
     background-color: #ff3f49;
     cursor: pointer;
 }
-img{
-    margin: 0px auto;
+
+.projectImg{
+    margin: 0px 5%;
+    box-shadow: 2px 2px 10px 1px #888888;
 }
